# fakenewsdetector

./: Dockerfile  Dockerfile.airflow  Dockerfile.superset  README.md  airflow-entrypoint.sh  docker-compose.yml  pyproject.toml  requirements.txt  superset_config.py
airflow/dags/: fakenews_dag.py
fakenewsdetector/: test_scraper.py
fakenewsdetector/kafka/: consumer.py
fakenewsdetector/pipeline/: bronze_layer.py  config.py  gold_layer.py  nlp_engine.py  silver_layer.py  silverlayer_spark.py
fakenewsdetector/quality/: great_expectations_suits.py
fakenewsdetector/scrapers/: Akhbarona_scraper.py  Barlamane_scraper.py  base_scraper.py  bbc_aljazira_scraper.py  hespress_scraper.py
sql/: init.sql
