[project]
name = "kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.1",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.96",
    "feedparser>=6.0.12",
    "kafka-python>=2.3.1",
    "langdetect>=1.0.9",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pg8000>=1.31.5",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
]
